message ConnectionType {
    enum Type {
        QUERY = 0;
        REQUEST = 1;
        CONNECT = 2;
    };

    required Type type = 1;
}

message QueryResults {
    message Parameter {
        required string key = 1;
        repeated string value = 2;
    }

    required string name = 1;
    required string type = 2;
    required string subtype = 3;
    required string version = 4;
    required string location = 5;
    required string port = 6;
    repeated Parameter parameters = 7;
}

message ConnectionRequestMessage {
    message Parameter {
        required string key = 1;
        required string value = 2;
    }

    repeated Parameter parameters = 1;
}

message ConnectionTokenMessage {
    required bytes token = 1;
    required uint32 sessionid = 2;
}

message ConnectionInitiation {
    required uint32 sessionid = 1;
}

message ConnectMessage {
    required bytes token = 1;
}
